# finance_tracker

./: .gitignore  LICENSE  MANIFEST.in  README.md  finance_tracker.py  pyproject.toml
templates/: details.html  index.html
