[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finance-tracker"
version = "1.0.0"
description = "A beautiful personal finance dashboard built with Flask"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Daniele Grassi"}
]
keywords = ["finance", "budget", "tracker", "dashboard", "flask"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Accounting",
]
requires-python = ">=3.8"
dependencies = [
    "Flask>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/finance-tracker"
Repository = "https://github.com/yourusername/finance-tracker"
Issues = "https://github.com/yourusername/finance-tracker/issues"

[project.scripts]
finance-tracker = "finance_tracker:main"

[tool.setuptools]
py-modules = ["finance_tracker"]

[tool.setuptools.package-data]
"*" = ["templates/*.html"]
